src/components/layout.css
p { 
  margin-bottom: 1.25rem;
}

.blog a {
  color: #1e90ff;
}

.blog a:hover { 
  text-decoration: underline;
}

.blog h2,
.blog h3 {
  font-size: 1.5rem;
  margin-bottom: .5rem;
}

.blog ul {
  margin-bottom: 1.25rem;
  list-style-type: disc;
  line-height: 1.625;
}

.blog-post { 
  transition: border-color .3s ease;
  border-bottom: 1px solid #eee;
}

.blog-post:hover{
  border-color:#ddd
}

code {
    background-color: #f5f2f0;
    padding: 3px;
}

code,
code[class*="language-"],
pre[class*="language-"] {
    font-size: 14px;
    margin-bottom: 20px;
}

